// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable component supports data table with column sorting 1`] = `
<div
  className="mdc-data-table"
>
  <div
    className="mdc-data-table__table-container"
  >
    <table
      className="mdc-data-table__table"
    >
      <thead>
        <tr
          className="mdc-data-table__header-row"
        >
          <th
            aria-sort="ascending"
            className="mdc-data-table__header-cell mdc-data-table__header-cell--numeric id-cell mdc-data-table__header-cell--with-sort mdc-data-table__header-cell--sorted"
            data-column-id="id"
            role="columnheader"
            scope="col"
          >
            <div
              className="mdc-data-table__header-cell-wrapper"
            >
              <button
                className="mdc-icon-button material-icons mdc-data-table__sort-icon-button"
              >
                arrow_upward
              </button>
              <div
                className="mdc-data-table__header-cell-label"
              >
                ID
              </div>
              <div
                aria-hidden="true"
                className="mdc-data-table__sort-status-label"
              />
            </div>
          </th>
          <th
            aria-sort="none"
            className="mdc-data-table__header-cell composer-cell mdc-data-table__header-cell--with-sort"
            data-column-id="composer-name"
            role="columnheader"
            scope="col"
          >
            <div
              className="mdc-data-table__header-cell-wrapper"
            >
              <div
                className="mdc-data-table__header-cell-label"
              >
                Composer Name
              </div>
              <button
                className="mdc-icon-button material-icons mdc-data-table__sort-icon-button"
              >
                arrow_upward
              </button>
              <div
                aria-hidden="true"
                className="mdc-data-table__sort-status-label"
              />
            </div>
          </th>
          <th
            className="mdc-data-table__header-cell none"
            role="columnheader"
            scope="col"
          >
            
          </th>
        </tr>
      </thead>
      <tbody
        className="mdc-data-table__content"
      >
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            1
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Wolfgang Amadeus Mozart
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./1"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            2
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Ludwig van Beethoven
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./2"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            3
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Antonio Vivaldi
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./3"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            4
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          />
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./4"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            5
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            George Frideric Handel
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./5"
            >
              Show Details
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataTable component supports data table with pagination 1`] = `
<div
  className="mdc-data-table"
>
  <div
    className="mdc-data-table__table-container"
  >
    <table
      className="mdc-data-table__table"
    >
      <thead>
        <tr
          className="mdc-data-table__header-row"
        >
          <th
            className="mdc-data-table__header-cell mdc-data-table__header-cell--numeric id-cell"
            role="columnheader"
            scope="col"
          >
            ID
          </th>
          <th
            className="mdc-data-table__header-cell composer-cell"
            role="columnheader"
            scope="col"
          >
            Composer Name
          </th>
          <th
            className="mdc-data-table__header-cell none"
            role="columnheader"
            scope="col"
          >
            
          </th>
        </tr>
      </thead>
      <tbody
        className="mdc-data-table__content"
      >
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            1
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Wolfgang Amadeus Mozart
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./1"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            2
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Ludwig van Beethoven
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./2"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            3
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Antonio Vivaldi
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./3"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            4
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          />
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./4"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            5
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            George Frideric Handel
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./5"
            >
              Show Details
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="mdc-data-table__pagination"
  >
    <div
      className="mdc-data-table__pagination-trailing"
    >
      <div
        className="mdc-data-table__pagination-rows-per-page"
      >
        <div
          className="mdc-select mdc-select--outlined mdc-data-table__pagination-rows-per-page-select"
        >
          <div
            aria-disabled={null}
            aria-haspopup="listbox"
            aria-required={null}
            className="mdc-select__anchor"
            role="button"
          >
            
            <span
              className="mdc-select__selected-text"
            >
              10
            </span>
            <span
              className="mdc-select__dropdown-icon"
            >
              <svg
                className="mdc-select__dropdown-icon-graphic"
                viewBox="7 10 10 5"
              >
                <polygon
                  className="mdc-select__dropdown-icon-inactive"
                  fillRule="evenodd"
                  points="7 10 12 15 17 10"
                  stroke="none"
                />
                <polygon
                  className="mdc-select__dropdown-icon-active"
                  fillRule="evenodd"
                  points="7 15 12 10 17 15"
                  stroke="none"
                />
              </svg>
            </span>
            <span
              className="mdc-notched-outline"
            >
              <span
                className="mdc-notched-outline__leading"
              />
              <span
                className="mdc-notched-outline__trailing"
              />
            </span>
          </div>
          <div
            className="mdc-select__menu mdc-menu mdc-menu-surface mdc-menu-surface--fullwidth"
            role="listbox"
          >
            <ul
              className="mdc-list"
            >
              <li
                aria-selected="true"
                className="mdc-list-item mdc-list-item--selected"
                data-value="10"
                role="option"
              >
                <span
                  className="mdc-list-item__ripple"
                />
                <span
                  className="mdc-list-item__text"
                >
                  10
                </span>
              </li>
              <li
                aria-selected={null}
                className="mdc-list-item"
                data-value="25"
                role="option"
              >
                <span
                  className="mdc-list-item__ripple"
                />
                <span
                  className="mdc-list-item__text"
                >
                  25
                </span>
              </li>
              <li
                aria-selected={null}
                className="mdc-list-item"
                data-value="50"
                role="option"
              >
                <span
                  className="mdc-list-item__ripple"
                />
                <span
                  className="mdc-list-item__text"
                >
                  50
                </span>
              </li>
              <li
                aria-selected={null}
                className="mdc-list-item"
                data-value="100"
                role="option"
              >
                <span
                  className="mdc-list-item__ripple"
                />
                <span
                  className="mdc-list-item__text"
                >
                  100
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        className="mdc-data-table__pagination-navigation"
      >
        <button
          className="mdc-icon-button material-icons mdc-data-table__pagination-button"
          disabled={true}
        >
          <div
            className="mdc-button__icon"
          >
            first_page
          </div>
        </button>
        <button
          className="mdc-icon-button material-icons mdc-data-table__pagination-button"
          disabled={true}
        >
          <div
            className="mdc-button__icon"
          >
            chevron_left
          </div>
        </button>
        <button
          className="mdc-icon-button material-icons mdc-data-table__pagination-button"
        >
          <div
            className="mdc-button__icon"
          >
            chevron_right
          </div>
        </button>
        <button
          className="mdc-icon-button material-icons mdc-data-table__pagination-button"
        >
          <div
            className="mdc-button__icon"
          >
            last_page
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataTable component supports data table with pagination 2`] = `
<div
  className="mdc-data-table my-table"
>
  <div
    className="mdc-data-table__table-container"
  >
    <table
      className="mdc-data-table__table"
    >
      <thead>
        <tr
          className="mdc-data-table__header-row"
        >
          <th
            className="mdc-data-table__header-cell mdc-data-table__header-cell--numeric id-cell"
            role="columnheader"
            scope="col"
          >
            ID
          </th>
          <th
            className="mdc-data-table__header-cell composer-cell"
            role="columnheader"
            scope="col"
          >
            Composer Name
          </th>
          <th
            className="mdc-data-table__header-cell none"
            role="columnheader"
            scope="col"
          >
            
          </th>
        </tr>
      </thead>
      <tbody
        className="mdc-data-table__content"
      >
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            1
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Wolfgang Amadeus Mozart
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./1"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            2
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Ludwig van Beethoven
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./2"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            3
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Antonio Vivaldi
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./3"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            4
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          />
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./4"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            5
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            George Frideric Handel
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./5"
            >
              Show Details
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="mdc-data-table__pagination my-class"
  >
    <div
      className="mdc-data-table__pagination-trailing"
    >
      <div
        className="mdc-data-table__pagination-rows-per-page"
      >
        <div
          className="mdc-data-table__pagination-rows-per-page-label"
        >
          Rows per page
        </div>
        <div
          className="mdc-select mdc-select--outlined mdc-data-table__pagination-rows-per-page-select"
        >
          <div
            aria-disabled={null}
            aria-haspopup="listbox"
            aria-required={null}
            className="mdc-select__anchor"
            role="button"
          >
            
            <span
              className="mdc-select__selected-text"
            >
              5
            </span>
            <span
              className="mdc-select__dropdown-icon"
            >
              <svg
                className="mdc-select__dropdown-icon-graphic"
                viewBox="7 10 10 5"
              >
                <polygon
                  className="mdc-select__dropdown-icon-inactive"
                  fillRule="evenodd"
                  points="7 10 12 15 17 10"
                  stroke="none"
                />
                <polygon
                  className="mdc-select__dropdown-icon-active"
                  fillRule="evenodd"
                  points="7 15 12 10 17 15"
                  stroke="none"
                />
              </svg>
            </span>
            <span
              className="mdc-notched-outline"
            >
              <span
                className="mdc-notched-outline__leading"
              />
              <span
                className="mdc-notched-outline__trailing"
              />
            </span>
          </div>
          <div
            className="mdc-select__menu mdc-menu mdc-menu-surface mdc-menu-surface--fullwidth"
            role="listbox"
          >
            <ul
              className="mdc-list"
            >
              <li
                aria-selected={null}
                className="mdc-list-item"
                data-value="3"
                role="option"
              >
                <span
                  className="mdc-list-item__ripple"
                />
                <span
                  className="mdc-list-item__text"
                >
                  3
                </span>
              </li>
              <li
                aria-selected="true"
                className="mdc-list-item mdc-list-item--selected"
                data-value="5"
                role="option"
              >
                <span
                  className="mdc-list-item__ripple"
                />
                <span
                  className="mdc-list-item__text"
                >
                  5
                </span>
              </li>
              <li
                aria-selected={null}
                className="mdc-list-item"
                data-value="10"
                role="option"
              >
                <span
                  className="mdc-list-item__ripple"
                />
                <span
                  className="mdc-list-item__text"
                >
                  10
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        className="mdc-data-table__pagination-navigation"
      >
        <div
          className="mdc-data-table__pagination-total"
        >
          96-100 of 100
        </div>
        <button
          className="mdc-icon-button material-icons mdc-data-table__pagination-button"
        >
          <div
            className="mdc-button__icon"
          >
            first_page
          </div>
        </button>
        <button
          className="mdc-icon-button material-icons mdc-data-table__pagination-button"
        >
          <div
            className="mdc-button__icon"
          >
            chevron_left
          </div>
        </button>
        <button
          className="mdc-icon-button material-icons mdc-data-table__pagination-button"
          disabled={true}
        >
          <div
            className="mdc-button__icon"
          >
            chevron_right
          </div>
        </button>
        <button
          className="mdc-icon-button material-icons mdc-data-table__pagination-button"
          disabled={true}
        >
          <div
            className="mdc-button__icon"
          >
            last_page
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataTable component supports standard data table 1`] = `
<div
  className="mdc-data-table"
>
  <div
    className="mdc-data-table__table-container"
  >
    <table
      className="mdc-data-table__table"
    >
      <thead>
        <tr
          className="mdc-data-table__header-row"
        >
          <th
            className="mdc-data-table__header-cell mdc-data-table__header-cell--numeric id-cell"
            role="columnheader"
            scope="col"
          >
            ID
          </th>
          <th
            className="mdc-data-table__header-cell composer-cell"
            role="columnheader"
            scope="col"
          >
            Composer Name
          </th>
          <th
            className="mdc-data-table__header-cell none"
            role="columnheader"
            scope="col"
          >
            
          </th>
        </tr>
      </thead>
      <tbody
        className="mdc-data-table__content"
      >
        <tr
          className="mdc-data-table__row odd"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            1
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Wolfgang Amadeus Mozart
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./1"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row even"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            2
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Ludwig van Beethoven
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./2"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row odd"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            3
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Antonio Vivaldi
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./3"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row even"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            4
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          />
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./4"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row odd"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            5
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            George Frideric Handel
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./5"
            >
              Show Details
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataTable component supports standard data table 2`] = `
<div
  className="mdc-data-table my-table"
>
  <div
    className="mdc-data-table__table-container"
  >
    <table
      className="mdc-data-table__table"
    >
      <tbody
        className="mdc-data-table__content"
      >
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            1
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Wolfgang Amadeus Mozart
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./1"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            2
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Ludwig van Beethoven
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./2"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            3
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            Antonio Vivaldi
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./3"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            4
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          />
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./4"
            >
              Show Details
            </a>
          </td>
        </tr>
        <tr
          className="mdc-data-table__row"
        >
          <th
            className="mdc-data-table__cell mdc-data-table__cell--numeric id-cell"
            scope="row"
          >
            5
          </th>
          <td
            className="mdc-data-table__cell composer-cell composer-body-cell"
          >
            George Frideric Handel
          </td>
          <td
            className="mdc-data-table__cell"
          >
            <a
              href="./5"
            >
              Show Details
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
